--- a/main.css
+++ b/main.css
@@ -1,11 +1,13 @@
-*{
+* {
     margin: 0;
     padding: 0;
+    text-decoration: none;
+    list-style: none;
 }
 
 
 
-nav ul{
+nav ul {
     width: 100%;
     list-style: none;
     display: flex;
@@ -13,91 +15,116 @@ nav ul{
     align-items: center;
 }
 
-nav li{
+nav li {
     height: 50px;
 }
 
-nav a{
+nav a {
     height: 100%;
     padding: 0 10px;
-    text-decoration:none;
+    text-decoration: none;
     display: flex;
     align-items: center;
     color: white;
 }
 
-.image{
-    width: 500px; height: 500px;
+.image {
+    width: 500px;
+    height: 500px;
     margin-left: 0px;
     margin-top: 300px;
 }
 
-.FormContainer{
+.FormContainer {
     width: 32rem;
-    margin-top: 0px; margin-bottom: 100px;
+    margin-top: 0px;
+    margin-bottom: 100px;
     flex-direction: column;
     background-color: white;
     border-left: 30px;
     margin-left: 43rem;
     margin-top: -21rem;
-    
-    
-    
-    
+
+
+
+
 }
 
-form{
+form {
     padding-left: 2rem;
     width: 30rem;
-    height: 23rem;
+    height: 27rem;
 
 
 
 }
 
-.FormContainer h1{
-    padding-left: 1rem;
-    font-size: 26px;
+.FormContainer h2 {
+    padding-left: -1rem;
+    font-size: 25px;
     color: #000;
-    padding-top: 2rem;
     margin-bottom: 2rem;
+    padding-top: 2rem;
+
 }
 
-.FormContainer b{
+.FormContainer h2 a {
+    text-decoration-style: none;
+
+
+}
+
+.FormContainer b {
     padding-left: 2rem;
+    padding-top: -5rem;
 }
 
-input{
+input {
     width: 21rem;
     height: 2rem;
     margin-top: 1rem;
+
     /* border: solid 1px blue; */
 }
 
-::placeholder{
+::placeholder {
     padding-left: 2rem;
 }
 
-.vail input{
+.vail input {
     margin-left: -9.5rem;
     height: 1rem;
     /* margin-top: 1.5rem; */
     position: absolute;
 }
-.vail label{
-   margin-left: 3rem;
-   font-size: 22px;
+
+.vail label {
+    margin-left: 1.7rem;
+    font-size: 15px;
+    margin-top: -1.4rem;
 }
 
-.btn  a{
-padding-left: 18rem; 
-margin-top: -1.4rem;
-position: absolute;
-font-size: 19px;
+.form .material-icons{
+    margin-left: -21rem;
+    position: absolute;
+    margin-top: 1.5rem;
+}
+/* 
+.password .material-icons{
+    margin-left: -11rem;
+    position: absolute;
+    margin-top: 1.5rem;
+} */
+
+.btn a {
+    left: 18rem;
+    top: -1rem;
+    position: relative;
+    font-size: 19px;
 }
 
-button{
-    width: 21rem;
+button {
+    width: 25rem;
     height: 3rem;
     background-color: rgb(61, 61, 228);
     color: #fff;
@@ -115,5 +142,39 @@ button{
 
 .privacy {
     padding-left: -2rem;
-    position: relative;
+    margin-left: 2rem;
+    padding-top: -20rem;
+    margin-top: -1.4rem;
+
+}
+
+.footer {
+    width: 100%;
+    height: 10rem;
+    margin-top: 1rem;
+    background-color: #fff;
+    margin-top: 25rem;
+
+}
+
+footer {
+    width: 100%;
+}
+
+.footer ul {
+    padding-left: 5rem;
+    display: inline-flex;
+    gap: 2rem;
+    padding-top: 5rem;
+
+
+}
+
+.footer li a {
+    color: #000;
+    font-size: 15px;
+    padding-top: 2rem;
+    font-family: Arial, Helvetica, sans-serif;
+
+
 }
