--- a/main.css
+++ b/main.css
@@ -26,6 +26,7 @@ nav a {
     display: flex;
     align-items: center;
     color: white;
+    margin-top: -2rem;
 }
 
 .image {
@@ -166,6 +167,7 @@ footer {
     display: inline-flex;
     gap: 2rem;
     padding-top: 5rem;
+    margin-bottom: 2rem;
 
 
 }
